syntax = "proto3";
package emitent;

service EmitentService {
  rpc NewEmitent(EmitentServiceRequest) returns (EmitentServiceReply);
}

message EmitentServiceRequest {
  string name = 1;
  string description = 2;
}

message EmitentServiceReply { string message = 1; }
